--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formik": "^2.2.9",
     "mui-datatables": "^4.3.0",
     "node-sass": "^7.0.3",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^5.2.0",
