--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^12.0.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "simplebar-react": "^3.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
